# PyMon

./: .gitignore  Instructions.txt  README.md  pymon.spec  pyproject.toml  translate_script.py
.github/workflows/: ci.yml  release.yml
pymon/auth/: callback_server.py  sso.py
pymon/core/: app.py
pymon/models/: industry.py
pymon/sde/: updater.py
pymon/services/: calendar_export.py  cloud_sync.py  email_notifier.py  market_service.py  name_resolver.py  notification_parser.py  update_checker.py
pymon/ui/: api_tester_widget.py  attribute_optimizer_widget.py  certificate_browser_widget.py  character_comparison_widget.py  data_browser_widget.py  dockable_tab_widget.py  implant_calculator_widget.py  loadout_import_dialog.py  main_window.py  market_browser_widget.py  owned_skill_books_widget.py  path_finder_widget.py  schedule_editor_widget.py  settings_dialog.py  setup_wizard.py  ship_browser_widget.py  sidebar_nav.py  skill_planner_widget.py  skills_pie_chart_widget.py  sortable_table_widget.py  trade_advisor_widget.py  trade_tracker_widget.py  wallet_chart_widget.py
