[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymon"
version = "1.0.0"
description = "EVE Online Character Monitor – A Python rewrite of EVEMon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "PyMon Team" }
]
keywords = ["eve-online", "evemon", "character-monitor", "esi", "mmo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "PySide6>=6.6",
    "httpx>=0.27",
    "cryptography>=42.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "aiosqlite>=0.20",
    "pyjwt>=2.8",
    "appdirs>=1.4",
    "orjson>=3.9",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "ruff>=0.3",
    "mypy>=1.9",
]
build = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/ICU184/PyMon"
Repository = "https://github.com/ICU184/PyMon"
"Bug Tracker" = "https://github.com/ICU184/PyMon/issues"

[project.scripts]
pymon = "pymon.__main__:main"

[project.gui-scripts]
pymon-gui = "pymon.__main__:main"

[tool.setuptools.packages.find]
include = ["pymon*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # ambiguous unicode char in string (en-dash in German UI text)
    "RUF002",  # ambiguous unicode char in docstring
    "RUF003",  # ambiguous unicode char in comment
    "RUF012",  # mutable class default (Qt-Widgets use this pattern)
    "B905",    # zip-without-strict (Python 3.10+ strict param not always needed)
    "SIM102",  # collapsible-if (readability preference)
    "SIM105",  # suppressible-exception (readability preference)
    "SIM108",  # if-else-block-instead-of-if-exp (readability)
    "SIM114",  # if-with-same-arms (readability)
    "E501",    # line-too-long (handled by line-length=120 + formatter)
    "UP031",   # printf-string-formatting (legacy code)
    "UP037",   # quoted-annotation (legacy code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ are re-exports

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
